ontol/ontol-compiler/test-cases/error/rel/needs_edge_with_union.on
domain ZZZZZZZZZZZTESTZZZZZZZZZZZ ()

def Foo (
    rel. 'id': (fmt '' => '/foo/' => uuid => .)
    rel* 'test'?: Union // ERROR entity-to-entity relationship must use an edge
)

def Bar (
    rel. 'id': (fmt '' => '/bar/' => uuid => .)
)

def Union (
    rel* is?: Foo
    rel* is?: Bar
)
